# astrocore

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run  testscene.cpp  vcpkg.json
include/astrocore/nodes/: node.h  shapenode.h  spritenode.h  treenode.h
include/astrocore/systems/: game.h  scenetree.h
include/astrocore/systems/rendering/: renderer.h  rendertarget.h
include/astrocore/systems/resources/: resourcemanager.h
src/component/: signaler.h  transform.cpp  transform.h
src/nodes/: node.cpp  node.h  shapenode.cpp  shapenode.h  spritenode.cpp  treenode.h
src/systems/: debug.h  game.cpp  game.h  renderer.cpp  renderer.h  rendertarget.cpp  rendertarget.h  scenetree.cpp  scenetree.h
src/systems/input/: input.cpp  input.h
src/systems/rendering/: renderer.cpp  renderer.h  rendertarget.cpp  rendertarget.h
src/systems/resources/: resourcemanager.cpp
